# fit2srt

./: .gitignore  README.md  pyproject.toml
src/fit2srt/: __init__.py
tests/: __init__.py
