[project]
name = "fit2srt"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "abrahum", email = "307887491@qq.com"},
]
dependencies = [
    "garmin-fit-sdk>=21.141.0",
    "srt>=3.5.3",
    "pydantic>=2.7.3",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
